First section, buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
 </head>
 
 <body>
-  <h1>Ingrid</h1>
+  <header class="header-website">
+    HEADER
+  </header>
+  <main>
+    <section class="section-display left-content">
+      <article class="text-content">
+        <h1 class="title">Ingrid Freguis</h1>
+        <p class="paragraph">A passionate Full Stack Software Developer 🚀
+          having an experience of
+          building
+          Web and Mobile applications with JavaScript / Reactjs / Nodejs / React
+          Native
+          and some other cool libraries and frameworks.</p>
+        <div class="socials">
+
+        </div>
+        <div class="action-div">
+          <button class="btn btn-primary">
+            Contact me
+          </button>
+          <button class="btn">
+            Download my resume
+          </button>
+        </div>
+      </article>
+      <div class="illustration">
+        <img src="img/illustration.png" alt="illustration">
+      </div>
+    </section>
+
+  </main>
+  <footer>
+    FOOTER
+    <p>© 2020 Ingrid Freguis</p>
+  </footer>
 </body>
 
 </html>
